--- a/gb/25/8/26/n14581287.md
+++ b/gb/25/8/26/n14581287.md
@@ -31,12 +31,12 @@ https://tuidang.epochtimes.com/index/showpost/id/33255129</p>
 https://tuidang.epochtimes.com/index/showpost/id/33255563</p>
 <p>责任编辑：欣明</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/16/n10306820.md#1" target="_blank">【还原史实】 整风运动 魔鬼整人初试啼声</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/8/n10699044.md#1" target="_blank">美国女学者修炼奇缘(上) 脱胎换骨的改变</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/4/n10761251.md#1" target="_blank">谭松：对大地主刘文彩庄园的采访</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/5/25/n7931386.md#1" target="_blank">生的希望</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
