--- a/gb/25/8/4/n14566605.md
+++ b/gb/25/8/4/n14566605.md
@@ -34,12 +34,12 @@ https://tuidang.epochtimes.com/index/showpost/id/33189685</p>
 https://tuidang.epochtimes.com/index/showpost/id/33190162</p>
 <p>责任编辑：欣明</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/28/n11552181.md#1" target="_blank">林辉：中共70年来卖国黑历史</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/20/n10921963.md#1" target="_blank">福国利民 2018年法轮功所获各类褒奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/12/n10137177.md#1" target="_blank">沉静：切·格瓦拉——魔幻偶像（二）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/23/n11405058.md#1" target="_blank">生死劫后 中共酷刑幸存者吁中国人了解真相</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
