--- a/gb/25/7/18/n14554917.md
+++ b/gb/25/7/18/n14554917.md
@@ -46,12 +46,12 @@
 <p>谢谢各位！</p>
 <p>责任编辑：李缘#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/21/n14230849.md#1">退党华人：默念“法轮大法好”遇难成祥</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/25/n14378609.md#1">美国前总统顾问：支持中国人退党</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/5/n14406770.md#1">【环球直击】曝中共图谋 台网红挺中国人退党</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645753.md#1">专家：这五种大宗杂货 多买反而浪费</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/19/n11462628.md#1" target="_blank">可心：香港警察有选择“枪口抬高一寸”的权利</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/11/n10902768.md#1" target="_blank">美向联合国提出关注 促中共停止迫害法轮功</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/15/n11942777.md#1" target="_blank">掸封尘：江青“醋坛子”的能量究竟有多大</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/24/n11406694.md#1" target="_blank">美国会吁中共释放法轮功学员 邓翠苹女儿感谢</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
